# qwen3-omni-vllm-docker

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  chat-template.jinja2  config.sh  download-model.sh  download.sh  logs.sh  pyproject.toml  requirements.txt  start.sh  status.sh  stop.sh  test-api.sh
